--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "social-feed-expanded",
+  "name": "wb-social-feeds",
   "version": "0.1.2",
   "homepage": "https://github.com/johndbarnard/social-feed",
   "authors": [
